hphp/hack/test/typecheck/reading_from_append_1.php.exp
File "reading_from_append_1.php", line 5, characters 3-4:
Cannot use [] for reading (NastCheck[3047])
